--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -1,11 +1,10 @@
 {
   "compilerOptions": {
     "lib": ["DOM", "ES2020"],
-    "jsx": "preserve",
+    "jsx": "react-jsx",
     "target": "ES2020",
     "noEmit": true,
     "skipLibCheck": true,
-    "jsxImportSource": "vue",
     "useDefineForClassFields": true,
 
     /* modules */
